@@ -3,7 +3,9 @@ Release 1.17 - ???
   * Tika now has support for automatic image captioning, that
     combines Computer Vision and Natural Language Processing to
     automatically generate a readable caption for an image (TIKA-2262).
-    
+
+  * Add TestCorruptedFiles to allow devs to test parsers against
+    corrupted input files (TIKA-2430).
     
 Release 1.16 - 7/7/2017
 
